deployment/kubernetes/kcn-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kcn-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kcn
  template:
    metadata:
      labels:
        app: kcn
    spec:
      containers:
      - name: api
        image: kcn-intelligence:v2
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kcn-service
spec:
  selector:
    app: kcn
  ports:
  - port: 80
    targetPort: 8000
