deployment/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcn-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.kcn.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kcn-service
            port:
              number: 80
